--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@
   --gradient-pewter: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
   --gradient-silver: linear-gradient(208deg, #C8C6C6 0%, #F1F0F0 53.5%, #C8C6C6 100%);
 
+  /* bootstrap colors */
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -50,7 +51,8 @@
   --dark: #343a40;
 
   /* fonts */
-  --body-font-family: 'Inter', sans-serif;
+  --body-font-family: 'Inter', sans-serif; 
+  --body-font-family-semibold: 'Inter-semiBold', sans-serif;
   --heading-font-family: 'Inter-bold', sans-serif;
 
   /* body sizes */
