--- a/blocks/category-nav/category-nav.css
+++ b/blocks/category-nav/category-nav.css
@@ -6,6 +6,7 @@
   position: relative;
   background: #f7f7f7;
   border-top: 1px solid #e5e5e5;
+  min-height: 64px;
 }
 
 /* Top of page navigation (Category Nav) - Third row */
