Finalize CSS and fix UE reset bug.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@
   --link-hover-color: #1d3ecf;
   --purple-color: #563b80;
   --dark-red-color: #9c1d26;
+  --dark-red-link-color:#801c1e;
   --red-color: #D73F41;
   --gradient-red: linear-gradient(92deg, #5D2227 36.27%, #982B35 70.68%, #5D2227 85.89%);
   --gradient-blue: linear-gradient(137deg, #08133C 4.07%, #2E3E79 75.46%);
