Polish category navigation styles, enhance dropdown positioning logic, fix glitchy mouse-over into dropdowns behavior. Removed console logs debug.

--- a/blocks/category-nav/category-nav.css
+++ b/blocks/category-nav/category-nav.css
@@ -74,7 +74,7 @@
   display: none;
   position: absolute;
   top: 100%;
-  margin-top: 8px;
+  left: 0;
   border-radius: 0 8px 8px;
   box-shadow: 0 4px 16px rgb(0 0 0 / 12%);
   background: #fff;
@@ -332,13 +332,6 @@
 
   .tabs-pane-js {
     padding: 0 24px;
-  }
-}
-
-@media (width >= 1200px) and (width < 1440px) {
-  .category-nav-dropdown {
-    min-width: 800px;
-    max-width: 800px;
   }
 }
 
