--- a/blocks/anchor-nav/anchor-nav.css
+++ b/blocks/anchor-nav/anchor-nav.css
@@ -27,23 +27,16 @@
 
   .anchor-nav-wrapper.stuck {
     position: fixed;
-    top: var(--sticky-top, 54px);
+    top: 54px;
     left: 0;
     right: 0;
     z-index: 98;
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
   }
 
-  /* Style the block itself as a flex container - preserves Universal Editor structure */
-  .anchor-nav.block.anchor-nav-container {
+  .anchor-nav-container {
     box-sizing: border-box;
     margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 53px;
-    width: 100%;
-    gap: 0;
   }
 
   .anchor-nav-wrapper.stuck .anchor-nav-container {
@@ -52,14 +45,23 @@
     padding: 0;
   }
 
-  /* Style Universal Editor's row divs as nav items */
-  .anchor-nav-container > .anchor-nav-item {
+  .anchor-nav-list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: space-between;
+    height: 53px;
+    width: 100%;
+  }
+
+  .anchor-nav-item {
     padding: 0;
     margin: 0;
     display: flex;
     align-items: center;
     height: 100%;
-    flex: 1;
   }
 
   .anchor-nav-link.button {
