--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@
   --dark-red-color: #9c1d26;
   --dark-red-link-color:#801c1e;
   --red-color: #D73F41;
+  --gradient-upi-steps-red: linear-gradient(145deg, #ca0919 0%, #8C2034 40%, #732C53 80%, #513873 100%);
   --gradient-red: linear-gradient(92deg, #5D2227 36.27%, #982B35 70.68%, #5D2227 85.89%);
   --gradient-blue: linear-gradient(137deg, #08133C 4.07%, #2E3E79 75.46%);
   --gradient-pewter: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
@@ -411,6 +412,12 @@ main>.section:first-of-type {
 main .section.light,
 main .section.highlight {
   background-color: var(--light-color);
+  margin: 0;
+  padding: 40px 0;
+}
+
+main .section.upi-steps-red-bg {
+  background: var(--gradient-upi-steps-red);
   margin: 0;
   padding: 40px 0;
 }
