--- a/blocks/link-to-upi/link-to-upi.css
+++ b/blocks/link-to-upi/link-to-upi.css
@@ -9,11 +9,12 @@
 }
 
 .link-to-upi .link-to-upi-container {
-  max-width: 1400px;
+  max-width: 540px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 0;
+  padding: 0 15px 10px;
 }
 
 .link-to-upi .link-to-upi-title {
@@ -45,22 +46,27 @@
 .link-to-upi .link-to-upi-text > p:first-child {
   font-size: 18px;
   font-weight: 700;
-  margin-bottom: 32px;
+  margin-bottom: 12px;
+  color: rgba(247 247 247 / 80%);
 }
 
 .link-to-upi .link-to-upi-text > p:last-of-type {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
-  margin-top: 32px;
-  margin-bottom: 0;
+  margin: 0;
+  color: rgba(247 247 247 / 80%);
+  text-align: center;
+  line-height: 1.3;
 }
 
 .link-to-upi .link-to-upi-text strong {
   font-weight: 700;
+  font-family: var(--body-font-family-semibold);
 }
 
-.link-to-upi .link-to-upi-text a {
+.link-to-upi .link-to-upi-text a u {
   color: #fff;
+  font-family: var(--heading-font-family);
   text-decoration: underline;
 }
 
@@ -84,7 +90,7 @@
   gap: 20px;
   position: relative;
   counter-increment: step-counter;
-  padding: 24px 0;
+  padding: 20px 0;
   border-bottom: 1px solid rgb(255 255 255 / 20%);
 }
 
@@ -103,7 +109,7 @@
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 700;
   font-family: var(--heading-font-family);
   flex-shrink: 0;
@@ -111,7 +117,8 @@
 
 .link-to-upi .link-to-upi-text ol li strong {
   color: #fff;
-  font-size: 18px;
+  font-family: var(--body-font-family-semibold);
+  font-size: 16px;
   font-weight: 700;
   line-height: 1.4;
   display: block;
@@ -121,53 +128,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
+  padding-top: 20px;
   order: 2;
 }
 
 .link-to-upi .link-to-upi-image img {
-  max-width: 100%;
+  max-width: 254px;
   height: auto;
-  max-height: 350px;
   object-fit: contain;
-}
-
-/* ===== TABLET (600px+) ===== */
-@media (width >= 600px) {
-  .link-to-upi {
-    padding: 60px 40px;
-  }
-
-  .link-to-upi .link-to-upi-container {
-    gap: 40px;
-  }
-
-  .link-to-upi .link-to-upi-title {
-    font-size: 42px;
-  }
-
-  .link-to-upi .link-to-upi-text > p:first-child {
-    font-size: 20px;
-  }
-
-  .link-to-upi .link-to-upi-text ol li {
-    padding: 28px 0;
-  }
-
-  .link-to-upi .link-to-upi-text ol li::before {
-    width: 75px;
-    height: 75px;
-    min-width: 75px;
-    font-size: 26px;
-  }
-
-  .link-to-upi .link-to-upi-text ol li strong {
-    font-size: 20px;
-  }
-
-  .link-to-upi .link-to-upi-image {
-    padding: 40px 0;
-  }
 }
 
 /* ===== DESKTOP (900px+) ===== */
@@ -177,14 +145,14 @@
   }
 
   .link-to-upi {
-    padding: 60px 40px;
+    padding: 70px 40px 150px;
   }
 
   .link-to-upi .link-to-upi-container {
     flex-flow: row wrap;
     align-items: flex-start;
     gap: 12px;
-    max-width: 1400px;
+    max-width: 1300px;
   }
 
   .link-to-upi .link-to-upi-title {
@@ -192,15 +160,15 @@
     font-weight: 700;
     line-height: 1.2;
     order: 1;
-    flex: 1 1 calc(100% - 567px);
-    max-width: calc(100% - 567px);
+    flex: 1 1 55%;
   }
 
   .link-to-upi .link-to-upi-text {
     font-size: 22px;
     order: 3;
-    flex: 1 1 calc(100% - 567px);
-    max-width: calc(100% - 567px);
+    flex: 1 1 40%;
+    min-width: 500px;
+    max-width: 57%;
   }
 
   .link-to-upi .link-to-upi-text p {
@@ -211,6 +179,10 @@
     font-size: 20px;
     font-weight: 400;
     margin-bottom: 24px;
+  }
+
+  .link-to-upi .link-to-upi-text > ol {
+    max-width: 635px;
   }
 
   .link-to-upi .link-to-upi-text ol li {
@@ -232,27 +204,34 @@
     line-height: normal;
   }
 
+  .link-to-upi .link-to-upi-text > p:last-of-type {
+    text-align: start;
+  }
+
   .link-to-upi .link-to-upi-text > p:last-of-type strong{
     font-size: 13px;
     margin-top: 24px;
     font-family: var(--body-font-family-semibold);
+    text-align: left;
   }
 
   .link-to-upi .link-to-upi-image {
-    flex: 0 0 550px;
+    flex: 0 1 40%;
     max-width: 550px;
-    width: 550px;
     padding: 0;
     order: 2;
     align-self: flex-start;
-    height: 100px;
+    display: flex;
+    justify-content: flex-end;
     align-items: normal;
+    height: 100px;
   }
 
   .link-to-upi .link-to-upi-image img {
     width: 100%;
-    max-width: 100%;
     height: auto;
+    max-width: 550px;
     max-height: 650px;
+    object-fit: contain;
   }
 }
