--- a/blocks/steps/steps.css
+++ b/blocks/steps/steps.css
@@ -129,7 +129,7 @@
   width: 70%;
   margin: 0 auto;
   font-size: 14px;
-  font-family: var(--body-font-family-semibold);
+  font-family: var(--body-font-family);
   font-weight: 600;
   font-style: normal;
   text-align: center;
@@ -237,7 +237,7 @@
     width: 50%;
     margin: 0 auto;
     font-size: 14px;
-    font-family: var(--body-font-family-semibold);
+    font-family: var(--body-font-family);
     font-weight: 600;
     font-style: normal;
     text-align: center;
