--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,27 +1,20 @@
 /* stylelint-disable max-line-length */
+
+/* Inter Variable Font - supports font-weight range 100-900 */
 @font-face {
   font-family: Inter;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('../fonts/inter-v8-latin-300.woff2') format('woff2');
+  src: url('../fonts/InterVariable.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
-  font-family: Inter-semiBold;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('../fonts/inter-v8-latin-500.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: Inter-bold;
-  font-style: bold;
-  font-weight: 700;
-  font-display: swap;
-  src: url('../fonts/inter-v8-latin-700.woff2') format('woff2');
+  src: url('../fonts/InterVariable-Italic.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
